@startuml diagramme de classe formation
title Diagramme de classe formation
class Etudiant {
    - resultat : Map<Matiere, double[]>
    + CalculMoyenneEtudiant() : double
    + GetResultats(matiere) : list <Resultat>
}

class Matiere {
    - nom : String
    + getNom() : String
    + equals() : boolean
    + hashCode() : int
}

class Identite {
    - NIP : int
    - Nom : String
    - Prenom : String
    + getNom() : String
    + getPrenom() : String
    + getNIP() : int
}

class Formation {
    - identifiant : String
    - matieres : Map<Matiere, double>
    + Formation(String identifiant, Map<Matiere, double> matieres)
    + Get identifiant() : String
    + GetCoefficient(String matiere) : double
    + RemoveMatiere(String matiere) : void
    + AddMatiere(String matiere, double coefficient) : void
}

class GroupeEtudiant {
    - etudiants : Set<Etudiant>
    + CalculerMoyenneGroupeEtudiant(matiere) : double
}

Etudiant "1" --> "1" Identite
Etudiant "1" --> "1..*" Matiere
Etudiant "1" --> "1" Formation
Formation "1" --> "1..*" Matiere
Formation "1" <-- "1" GroupeEtudiant
Etudiant "1" --> "1" GroupeEtudiant
GroupeEtudiant "1" --> "1..*" Etudiant


@enduml